Get Auth User docs added
